Layout fixes, adding a "shifted" layout

--- a/app/assets/stylesheets/_base.css.scss
+++ b/app/assets/stylesheets/_base.css.scss
@@ -40,7 +40,7 @@ figure img {
 
 #sectionnav {
   float: left;
-  width: 9em;
+  width: $sidebar-width;
   margin-right: $sidebar-gutter;
   & + * { overflow: hidden; }
 }
