--- a/app/assets/stylesheets/layout/_layout.css.scss
+++ b/app/assets/stylesheets/layout/_layout.css.scss
@@ -78,5 +78,9 @@
   border-top: divider();
 }
 
+.l-shifted {
+  padding-left: ($sidebar-width + $sidebar-gutter);
+}
+
 // Other columns
 @include make-grid();
